# Lithe

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  vcpkg.json
.github/workflows/: linux.yml  linux_build.yml  macos.yml  macos_build.yml  tests.yml  unix_build.yml  windows.yml  windows_build.yml
.github/workflows/builds/: windows_build.yml
Editor/: CMakeLists.txt  main.cpp
Lithe/: CMakeLists.txt
Lithe/assets/shaders/: default.glsl.frag  default.glsl.vert  default.msl.frag  default.msl.vert
Lithe/include/: ForwardDecls.h  InternalTypes.h  pch.h
Lithe/include/Lithe/: Lithe.h
Lithe/include/Lithe/Core/: Application.cpp  Application.h  Clock.h  EntryPoint.cpp  EntryPoint.h  FileManager.h  Log.h  Prova.h  RenderSystem.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  Window.mm  WindowWrapper.h
Lithe/include/Lithe/Events/: Event.h  EventBus.h  EventDispatcher.h  Input.h  InputCombo.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Lithe/include/Lithe/Scene/: Camera.h  Components.h  Entity.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Scene.cpp  Scene.h
Lithe/include/Lithe/Utils/: Utils.h
Lithe/private/: WindowWrapper.h
Lithe/src/Core/: Application.cpp  EntryPoint.cpp  Renderer.cpp
Lithe/src/Platform/Common/: WindowWrapper.cpp
Lithe/src/Platform/Linux/: Window.cpp
Lithe/src/Platform/MacOS/: CocoaInput.mm  CocoaWindow.mm  Window.mm
Lithe/src/Platform/Windows/: Win32Input.cpp  Win32Window.cpp  Win32WindowWrapper.cpp  Window.cpp
Lithe/src/Scene/: OrthographicCamera.cpp  PerspectiveCamera.cpp  Scene.cpp
Lithe/tests/: CMakeLists.txt  EventDispatcherTests.cpp
Sandbox/: CMakeLists.txt  Sandbox.cpp
scripts/: setup.bat  setup.sh
